fixed wrap content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,6 +561,11 @@ img {
 /* ----------------------------------------------------------------------------------------
 *                               06. Portfolio/work area css
 * --------------------------------------------------------------------------------------- */
+
+.row.fix{
+    display:flex;
+    flex-wrap: wrap;
+}
 .portfolio .mix {
     display: none;
 }
